Agrega archivo de contacto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Sistema de registro de Juegos</title>
 </head>
 <body>
-    
+    <h1>
+        Correo: lfhv@gmail.com
+    </h1>
 </body>
 </html>
