Actualiza el index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Sistema de registro de Juegos</title>
 </head>
 <body>
-    <h1>
-        Correo: lfhv@gmail.com
-    </h1>
+  <script src="app.js"></script>
 </body>
 </html>
